hphp/test/slow/password/invalid_algo.php.expectf

Catchable fatal error: Argument 2 passed to password_hash() must be an instance of int, %rv?%rarray given in %s/test/slow/password/invalid_algo.php on line 2
